--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <meta name="description" />
     <link
       rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v6.2.1/css/all.css"
-    />
+      href="https://use.fontawesome.com/releases/v6.2.1/css/all.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet" />
     <title>React App</title>
   </head>
   <body>
